--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.4",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
@@ -18,6 +20,7 @@
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
     "vite-plugin-css": "^1.0.4"
