--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "npm": "^10.2.4",
     "react": "^18.2.0",
