--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -33,7 +34,8 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
-    "vite-plugin-css": "^1.0.4"
+    "vite-plugin-css": "^1.0.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
