--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.14.19",
     "@mui/system": "^5.14.19",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
@@ -32,8 +33,11 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
+    "redux": "^5.0.0",
+    "redux-persist": "^6.0.0",
     "vite-plugin-css": "^1.0.4",
     "yup": "^1.3.2"
   },
