--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "jwt-decode": "^4.0.0",
     "npm": "^10.2.4",
     "react": "^18.2.0",
-    "react-datepicker": "^4.24.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
