--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.0.6",
     "formik": "^2.4.5",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
