--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "npm": "^10.2.4",
     "react": "^18.2.0",
+    "react-checkmark": "^2.0.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
