--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.19",
+    "@mui/material": "^5.15.4",
     "@mui/system": "^5.14.19",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
@@ -38,11 +39,15 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "vite-plugin-css": "^1.0.4",
     "yup": "^1.3.2"
   },
