--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
