--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
+    "react-share": "^5.0.3",
+    "react-share-social": "^0.1.55",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
