--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-checkmark": "^2.0.0",
@@ -38,6 +39,7 @@
     "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.4",
@@ -52,7 +54,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "vite-plugin-css": "^1.0.4",
-    "yup": "^1.3.2"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
