--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.15.6",
     "@mui/system": "^5.15.6",
+    "@react-google-maps/api": "^2.19.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
@@ -44,15 +45,19 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
+    "react-scripts": "^3.0.1",
     "react-select": "^5.8.0",
     "react-share": "^5.0.3",
     "react-share-social": "^0.1.55",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.26.0",
+    "react-websocket": "^2.1.0",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
+    "use-places-autocomplete": "^4.0.1",
     "vite-plugin-css": "^1.0.4",
     "yup": "^1.3.3"
   },
