--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.26.0",
-    "react-websocket": "^2.1.0",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "use-places-autocomplete": "^4.0.1",
     "vite-plugin-css": "^1.0.4",
+    "websocket": "^1.0.34",
     "yup": "^1.3.3"
   },
   "devDependencies": {
