--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "leaflet": "^1.9.4",
     "npm": "^10.2.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-checkmark": "^2.0.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
@@ -46,6 +48,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^3.0.1",
+    "react-search-autocomplete": "^8.5.2",
     "react-select": "^5.8.0",
     "react-share": "^5.0.3",
     "react-share-social": "^0.1.55",
@@ -57,6 +60,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "use-places-autocomplete": "^4.0.1",
+    "use-react-countries": "^2.0.0",
     "vite-plugin-css": "^1.0.4",
     "websocket": "^1.0.34",
     "yup": "^1.3.3"
